--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Apresentação</h2>
 					<div class="resume-section-content">
 						<p class="mb-0">Eu sou um comunicador, com experiência em eventos e dinâmicas acadêmicas, minhas
-							habilidades comunicativas estão em ascenção. Sempre fui fascinado pela psicologia humana e
+							habilidades comunicativas estão em ascensão. Sempre fui fascinado pela psicologia humana e
 							pelas relações interpessoais, busco compreender as nuances que influenciam as decisões a
 							partir de tais estudos. A tecnologia e a inovação são para mim, áreas de profundo interesse,
 							pois representam o futuro, me esforço para aprender o máximo possível nesses âmbitos, que se
